--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: noppflow
     spec:
+      serviceAccountName: noppflow-controller
       containers:
         - name: noppflow
           image: noppflow:latest
